Limit the amount of unassigned shards